Added home route/controller and eslint

--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
   "license": "Apache2.0",
   "private": true,
   "scripts": {
+    "lint": "eslint --fix .",
     "db": "docker-compose up -d qrfindr_database",
     "start-be": "npm run db && docker-compose up qrfindr_backend",
     "dbup": "mkdir -p backend/database/migrations && docker-compose up qrfindr_database_up",
     "dbdown": "mkdir -p backend/database/migrations && docker-compose up qrfindr_database_down",
     "dbcreate": "cd backend/database && node bin/createMigration.js"
+  },
+  "devDependencies": {
+    "eslint": "^7.16.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "prettier": "^2.2.1"
   }
 }
