More cleanup and no run as root

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,20 @@
 # <--------------STAGE--------------> qrfindr-be
 FROM mhart/alpine-node:14 as qrfindr-be
 
+RUN addgroup -g 10001 -S nonroot && adduser -u 10000 -S -G nonroot -h /home/nonroot nonroot
+
+RUN apk add --no-cache tini bind-tools
+
 # Create App directory
 RUN mkdir -p /var/app
+RUN chown -R nonroot:nonroot /var/app
 WORKDIR /var/app
 
 RUN npm i -g yarn
 
 COPY package.json yarn.lock /var/app/
+
+USER nonroot
 
 # <--------------STAGE--------------> BE Deployment
 FROM qrfindr-be as be-deployment
@@ -16,7 +23,9 @@ COPY app /var/app/app
 
 RUN yarn install --production=true
 
-CMD ["yarn","start"]
+ENTRYPOINT ["/sbin/tini", "--", "yarn"]
+
+CMD ["start"]
 
 # <--------------STAGE--------------> BE Development
 FROM qrfindr-be as be-development
