--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "qrfindr",
+  "name": "fullstack-app-template",
   "version": "1.0.0",
   "description": "Keep track of your things, with QR codes!",
   "main": "index.js",
-  "repository": "git@github.com:FizzyGalacticus/qrfindr",
+  "repository": "https://github.com/FizzyGalacticus/fullstack-app-template",
   "author": "Dustin L. Dodson <dustinleedodson@gmail.com>",
   "license": "Apache2.0",
   "private": true,
   "scripts": {
     "lint": "eslint --fix .",
-    "db": "docker-compose up -d qrfindr_database",
-    "start-be": "npm run db && docker-compose up qrfindr_backend",
-    "dbup": "mkdir -p backend/database/migrations && docker-compose up qrfindr_database_up",
-    "dbdown": "mkdir -p backend/database/migrations && docker-compose up qrfindr_database_down",
+    "db": "docker-compose up -d template_database",
+    "start-be": "npm run db && docker-compose up template_backend",
+    "dev": "npm run start-be",
+    "dbup": "mkdir -p backend/database/migrations && docker-compose up template_database_up",
+    "dbdown": "mkdir -p backend/database/migrations && docker-compose up template_database_down",
     "dbcreate": "cd backend/database && node bin/createMigration.js",
     "preinstall": "husky install"
   },
