--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
-# <--------------STAGE--------------> qrfindr-be
-FROM mhart/alpine-node:14 as qrfindr-be
+# <--------------STAGE--------------> template-be
+FROM mhart/alpine-node:14 as template-be
 
 RUN addgroup -g 10001 -S nonroot && adduser -u 10000 -S -G nonroot -h /home/nonroot nonroot
 
@@ -17,7 +17,7 @@ COPY package.json yarn.lock /var/app/
 USER nonroot
 
 # <--------------STAGE--------------> BE Deployment
-FROM qrfindr-be as be-deployment
+FROM template-be as be-deployment
 
 COPY app /var/app/app
 
@@ -28,7 +28,7 @@ ENTRYPOINT ["/sbin/tini", "--", "yarn"]
 CMD ["start"]
 
 # <--------------STAGE--------------> BE Development
-FROM qrfindr-be as be-development
+FROM template-be as be-development
 
 RUN npm i -g nodemon
 
@@ -39,14 +39,14 @@ RUN yarn
 CMD ["npm", "run", "dev"]
 
 # <--------------STAGE--------------> DB Migrations
-FROM qrfindr-be as db-migrations
+FROM template-be as db-migrations
 
 COPY database /var/app/
 
 RUN yarn
 
 # <--------------STAGE--------------> Blank Postgres
-FROM postgres:12-alpine as qrfindr-be-blank-db
+FROM postgres:12-alpine as template-be-blank-db
 
 ARG DB_USER=postgres
 ARG DB_PASS=postgres
