--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "eslint": "^7.16.0",
     "eslint-plugin-prettier": "^3.3.0",
     "husky": "^5.0.6",
-    "prettier": "^2.2.1",
-    "simple-git": "^2.31.0"
+    "prettier": "^2.2.1"
   }
 }
