--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "postinstall": "husky install"
   },
   "devDependencies": {
+    "@fizzygalacticus/pre-commit-lint": "^0.1.0",
     "eslint": "^7.16.0",
     "eslint-plugin-prettier": "^3.3.0",
     "husky": "^5.0.6",
-    "prettier": "^2.2.1",
-    "simple-git": "^2.31.0"
+    "prettier": "^2.2.1"
   }
 }
