--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.7'
 
 services:
+    portainer:
+        image: portainer/portainer:alpine
+        ports:
+            - 9998:9000
+            - 9999:8000
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+        command: --no-auth
+
     template_database:
         container_name: 'template_database'
         build:
