--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "scripts": {
     "lint": "eslint --fix .",
     "db": "docker-compose up -d template_database",
-    "start-be": "npm run db && docker-compose up template_backend",
-    "dev": "npm run start-be",
+    "start-be": "npm run db && docker-compose up -d template_backend",
+    "start-fe": "docker-compose up -d template_frontend",
+    "dev": "npm run start-be && npm run start-fe",
     "dbup": "mkdir -p backend/database/migrations && docker-compose up template_database_up",
     "dbdown": "mkdir -p backend/database/migrations && docker-compose up template_database_down",
     "dbcreate": "cd backend/database && node bin/createMigration.js",
@@ -19,8 +20,12 @@
   },
   "devDependencies": {
     "@fizzygalacticus/pre-commit-lint": "^0.1.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.16.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.0.6",
     "prettier": "^2.2.1"
   }
